# Prelude-Engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/Core/: Config.h  CoreConfig.h  GlobalConfig.h  Ptr.h  PtrBase.h  RefCore.cpp  RefCore.h
engine/Event/: BaseEvent.cpp  BaseEvent.h  Event.cpp  Event.h  EventData.cpp  EventData.h  EventType.cpp  EventType.h  IEvent.h  IEventListener.h  IEventManager.h  StandardEventManager.cpp  StandardEventManager.h
engine/IO/: ISerializable.h  IStream.h
engine/Memory/: Alloc.cpp  Alloc.h  Allocator.cpp  Allocator.h  Constructor.h
engine/Util/: Enumerator.h  Iterator.h  TypeTraits.h
sample/: CMakeLists.txt  main.cpp
sample/src/: main.cpp
